--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "mongodb": "^6.10.0",
